UPD [global] texte & section contact

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -67,12 +67,11 @@
 
     "contact_title": "Contact Me",
     "contact_subtitle": "Feel free to get in touch",
+    "contact_status": "GitHub Pages does not allow direct submission of forms. If you wish to contact me, please refer to my CV or contact details below.",
     "contact_info_call": "Call Me",
-    "contact_info_phone": "07 49 34 71 25",
+    "contact_info_phone": "+33 7 49 34 71 25",
     "contact_info_email": "Email",
     "contact_info_email_address": "da.matheo@hotmail.com",
-    "contact_info_location": "Location",
-    "contact_info_location_address": "79 impasse de la prairie, Saint-Girod",
     "contact_label_name": "Name",
     "contact_label_email": "Email",
     "contact_label_object": "Subject",
