--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -62,12 +62,11 @@
 
     "contact_title": "Contáctame",
     "contact_subtitle": "No dudes en ponerte en contacto",
+    "contact_status": "GitHub Pages no permite el envío directo de formularios. Si desea ponerse en contacto conmigo, consulte mi CV o los datos de contacto que figuran a continuación.",
     "contact_info_call": "Llámame",
-    "contact_info_phone": "07 49 34 71 25",
+    "contact_info_phone": "+33 7 49 34 71 25",
     "contact_info_email": "Correo electrónico",
     "contact_info_email_address": "matheo.dasilva@etu.univ-smb.fr",
-    "contact_info_location": "Ubicación",
-    "contact_info_location_address": "79 impasse de la prairie, Saint-Girod",
     "contact_label_name": "Nombre",
     "contact_label_email": "Correo electrónico",
     "contact_label_object": "Asunto",
