--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -37,7 +37,7 @@
     "work": "Travail",
     "education_bachelor": "BUT Informatique",
     "education_university": "Université Savoie Mont Blanc, Annecy",
-    "education_highschool": "BAC STI2D spécialité SIN mention assez bien + Bourse du mérite",
+    "education_highschool": "BAC STI2D spécialité SIN mention bien + Bourse du mérite",
     "education_highschool_location": "Lycée de l'Albanais, Rumilly",
     "work_employee2": "Employé commercial",
     "work_company2": "Bi1, Saint-Félix",
@@ -69,12 +69,11 @@
 
     "contact_title": "Contactez-moi",
     "contact_subtitle": "N'hésitez pas à prendre contact",
+    "contact_status": "GitHub Pages ne permet pas l'envoi direct de formulaires. Si vous souhaitez me contacter, veuillez vous réferer à mon CV ou à mes coordonnées ci-dessous.",
     "contact_info_call": "Appelle moi",
     "contact_info_phone": "07 49 34 71 25",
     "contact_info_email": "Email",
     "contact_info_email_address": "da.matheo@hotmail.com",
-    "contact_info_location": "Lieu",
-    "contact_info_location_address": "79 impasse de la prairie, Saint-Girod",
     "contact_label_name": "Nom",
     "contact_label_email": "Email",
     "contact_label_object": "Objet",
